--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -121,7 +121,7 @@ define \(\kth{Y}\) via a (time-homogeneous) Markov chain:
     % &\quad = k(y \given \kth{y}) \dif\mu(y)
   \end{aligned}
 \end{equation}
-for all \(k \ge 1\).  By constructing the parametrize measure \(K\), the \emph{transition kernel},
+for all \(k \ge 1\).  By constructing the parametrized measure \(K\), the \emph{transition kernel},
 in the right way, the resulting chain is ergodic with the target density \(\pi\) as the unique
 stationary distribution, i.e., for all measurable sets \(A\),
 \begin{equation}
@@ -844,12 +844,13 @@ how SSA-form representation is a natural structure for extracting and analyzing 
 and how the necessary transformations arise in practise.  To appreciate how the form of the
 computation graphs interacts with the mathematics, some foundations need to be introduced first.
 
-Many algorithms in machine learning and other domains can be expressed as an optimization problem
-over a multivatiate function with scalar output~-- typically a loss function over a parameter space,
-which measures how far a model prediction is form the true target values.  The optimal model is then
-just that one for which the parameters minimize the loss function.  When the loss function is
-(sub-)differentiable, there exist a variety of gradient-based optimization methods to find this
-optimum (or, in the non-convex case, at least a practically sufficient local minimum).
+\newthought{Many algorithms in machine learning} and other domains can be expressed as an
+optimization problem over a multivatiate function with scalar output~-- typically a loss function
+over a parameter space, which measures how far a model prediction is form the true target values.
+The optimal model is then just that one for which the parameters minimize the loss function.  When
+the loss function is (sub-)differentiable, there exist a variety of gradient-based optimization
+methods to find this optimum (or, in the non-convex case, at least a practically sufficient local
+minimum).
 
 While in some cases the loss function is simple enough to find the gradient by hand, in general, the
 model, and therefore the loss function, may be specified in terms of rather complicated programs,
@@ -924,15 +925,15 @@ In the one-dimensional case, we simply have
   \Dif \phi(x) = \Delta \mapsto \partial_1 \phi(x) \, \Delta,
 \end{equation}
 where \(\partial_1 \phi(x)\) denotes the standard \enquote{primitive} derivative, since linear maps
-are exactly multiplications by a scalar.  Therefore, we can recover
+are exactly multiplications by a scalar.  Therefore, we can recover the chain rule
 \begin{equation}
   \begin{aligned}
     \Dif(\phi \circ \psi)(x)(\Delta) &=
     \left( \Dif\phi(\psi(x)) \circ \Dif\psi(x) \right)(\Delta) \\
-    &= \Dif\phi(\psi(x))\left( \Dif\psi(x)(\Delta) \right) \\
-    &= \Dif\phi(\psi(x))\left( \partial_1 \psi(x) \, \Delta \right) \\
-    &= \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \, \Delta \\
-    &= \left( \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \right) \, \Delta,
+    % &= \Dif\phi(\psi(x))\left( \Dif\psi(x)(\Delta) \right) \\
+    % &= \Dif\phi(\psi(x))\left( \partial_1 \psi(x) \, \Delta \right) \\
+    % &= \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \, \Delta \\
+    &= \left( \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \right) \, \Delta
   \end{aligned}
 \end{equation}
 as we know it from calculus.  Here, the product in the resulting expression arises from the fact
@@ -951,14 +952,14 @@ Consider the specific case of \(f(x, y) = sin(x) - y\). For simpler notation, le
   \begin{aligned}
     \Dif f(x, y) &= \Dif(g \circ (\sin \otimes \ident))(x, y) \\
     &= \Dif g\left( (\sin \otimes \ident)(x, y) \right) \circ \Dif(\sin \otimes \ident)(x, y) \\
-    &= \left( (\Delta_1, \Delta_2) \mapsto \Delta_1 - \Delta_2 \right) \circ \left( \Dif\sin(x)
-      \otimes \Dif \ident(y) \right) \\
-    &= (\Delta_1, \Delta_2) \mapsto \partial_1\sin(x) \, \Delta_1 - 1 \Delta_2 \\
+    % &= \left( (\Delta_1, \Delta_2) \mapsto \Delta_1 - \Delta_2 \right) \circ \left( \Dif\sin(x)
+      % \otimes \Dif \ident(y) \right) \\
+    % &= (\Delta_1, \Delta_2) \mapsto \partial_1\sin(x) \, \Delta_1 - 1 \Delta_2 \\
     &= (\Delta_1, \Delta_2) \mapsto \cos(x) \, \Delta_1 - \Delta_2.
   \end{aligned}
 \end{equation}
-In order to do this algorithmically, let us expand the computation of \(f\) into a sequence of
-intermediate, primitive calculations, as we would have in a programmatical representation:
+In order to calculate this algorithmically, let us expand the computation of \(f\) into a sequence
+of intermediate, primitive calculations, as we would have in a programmatical representation:
 \begin{equation}
   \label{eq:ad-primal}
   \begin{aligned}
@@ -994,25 +995,33 @@ computing \((v, \dot{v})\) for every variable \(v\), given its parents in the gr
 a form of non-standard execution, which will be explained in more detail below.
 
 \begin{figure}[t]
+  \centering
   \subbottom[Forward mode.\label{fig:comp-graph-fw}]{%
-    \includegraphics[width=0.45\textwidth]{figures/comp-graph}}
-  \hfill
+    \includegraphics[]{figures/comp-graph}}
+  \qquad
   \subbottom[Backward mode.\label{fig:comp-graph-bw}]{%
-    \includegraphics[width=0.45\textwidth]{figures/comp-graph-backward}}
+    \includegraphics[]{figures/comp-graph-backward}}
   \caption{Computation graph and intermediate expressions of the expression \protect\jlinl{g(sin(x),
       y)}, together with the derivative graphs in forward- and backward mode.  Dashed arrows
     indicate re-use of primal values in the derivative graph.}
   \label{fig:comp-graph}
 \end{figure}
-\todo{convert omega to noto, absolute font size}
 
 \newthought{Recovering the full gradient} of a function \(\phi: U \subseteq \RR^N \to \RR\) (which
 is generally the form of loss functions for parametric models) requires to evaluate \(\Dif \phi(x)\)
 \(N\) times, however.  This is because individual partial derivatives can only be extracted from
-\(\Dif \phi(x)\) by calculating the sensitivities to unit input perturbations \(\Delta_i = 1\) with
-respect to one of the input variables:
+\(\Dif \phi(x)\) by calculating the sensitivities to unit input perturbations in coordinate
+directions, for each of the input variables:
 \begin{equation}
-  \Dif \phi(x)(0, \ldots, \Delta_i, \ldots, 0) = \partial_i \phi(x),
+  \nabla \phi(x) = \begin{pmatrix}
+    \Dif \phi(x)(1, 0, \ldots, 0)  \\
+    \vdots \\
+    \Dif \phi(x)(0, \ldots, 0, 1)
+  \end{pmatrix} = \begin{pmatrix}
+    \partial_1 \phi(x) \\
+    \vdots \\
+    \partial_N \phi(x)
+  \end{pmatrix},
 \end{equation}
 which is really a special case of taking directional derivatives (which can be recovered generally
 by application of the differential to any vector with unit norm.)
@@ -1031,48 +1040,53 @@ readable when we fix a basis to represent the derivative.  Doing so, in the fini
 the derivative \(\Dif \phi(x)\) is the Jacobian matrix at \(x\), \(J_{\phi}(x)\).  In this setting,
 forward-mode AD is simply an efficient way to calculate the \emph{Jacobian-vector-product}
 \(J_{\phi}(x) \Delta\), or equivalently the total derivative for a fixed perturbation, avoiding full
-matrix multiplication~-- but the result already a scalar, which is the reason we have to apply it to
-the basis vectors to get back the gradient.  Backward mode, on the other hand, calculates the
-product of the Jacobian with the operator that should be applied to the result, and returns a matrix:
+matrix multiplication~-- which is the reason we have to apply it to the basis vectors to get back
+the gradient.  Backward mode, on the other hand, calculates the product of the Jacobian with the
+operator that should be applied to the result, but does not yet apply it to the input
+perturbation~-- therefore, it returns a matrix:
 \begin{equation}
   \begin{aligned}
     \mathfrak{d} (\Dif \phi(x)(\Delta)) &= \transpose{d} J_{\phi}(x) \Delta \\
     &= \transpose{\left( \transpose{J_{\phi}(x)} d \right)} \Delta \\
-    &= \CoDif \phi(x)(\mathfrak{d})(\Delta).
+    &= \CoDif \phi(x)(\mathfrak{d})(\Delta),
   \end{aligned}
 \end{equation}
-Where we assume \(\mathfrak{d} = \Omega \mapsto \transpose{d}\Omega\).  Since the unapplied
-\(\CoDif \phi(x)(\mathfrak{d})\) is itself an object in the dual space, it is represented as a
-transposed vector~-- and in fact, it is nothing else than a multiple of the transposed Jacobian.
-Recovering the gradient then reduces to evaluating it at a constant output perturbation of \(1\),
-which is equivalent to the application of the primal differential to the matrix of basis vectors.
+where we assume \(\mathfrak{d}\) to be represented by the covector \(\transpose{d}\).  Since the
+unapplied \(\CoDif \phi(x)(\mathfrak{d})\) is itself an object in the dual space, it is also
+represented as a covector~-- and in fact, nothing else than a transformation of the transposed
+Jacobian.  Recovering the gradient of a loss function then reduces to evaluating it at a constant
+scalar output perturbation of \(1\), which is equivalent to the application of the primal
+differential to the matrix of basis vectors.
 
-Note that due to this matrix nature, the adjoint operator simply inverses the order of composition:
+Note that due to this relation to the transpose, the adjoint operator inverses the order of
+composition in the chain rule:
 \begin{equation}
   \begin{aligned}
-    \Dif (\phi \circ \psi)(x) &= J_{\phi}(\psi(x)) J_{\psi}(x) \\
-    &=  \transpose{J_{\psi}(x)} \transpose{J_{\phi}(\psi(x))} \\
-    &= \CoDif\psi(x) \circ \CoDif\phi(\psi(x)).
+    \CoDif (\phi \circ \psi)(x)(\mathfrak{d}) &= \transpose{d} J_{\phi}(\psi(x)) J_{\psi}(x) \\
+    &=  \transpose{\left( \transpose{J_{\psi}(x)} \transpose{J_{\phi}(\psi(x))} d \right)} \\
+    &= \left( \CoDif\psi(x) \circ \CoDif\phi(\psi(x)) \right)(\mathfrak{d}).
   \end{aligned}
 \end{equation}
-For our example function \(f\), this gives the same structural form of the result~-- only that now,
-the value is a vector.  \(\mathfrak{d}\) can in this case be identified with a scalar \(\delta\),
-therefore:
+For our example function \(f\), this gives the same structural form of the result as the forward
+mode~-- only that now, the value is a vector.  \(\mathfrak{d}\) can in this case be identified with
+a scalar \(\delta\), therefore:
 \begin{equation}
   \begin{aligned}
     \CoDif f(x, y) &= \CoDif (g \circ (\sin \otimes \ident))(x, y) \\
     &= \CoDif(\sin \otimes \ident) \circ \CoDif g((\sin \otimes \ident)(x, y)) \\
-    &= (\CoDif\sin \otimes \CoDif\ident) \circ (\delta \mapsto \transpose{[\delta, -\delta]}) \\
-    &= (\partial_1 \sin(x) \otimes 1) \circ (\delta \mapsto \transpose{[\delta, -\delta]}) \\
-    &= \delta \mapsto \transpose{[\partial_1\sin(x)\delta, -1 \delta]} \\
+    % &= (\CoDif\sin \otimes \CoDif\ident) \circ (\delta \mapsto \transpose{[\delta, -\delta]}) \\
+    % &= (\partial_1 \sin(x) \otimes 1) \circ (\delta \mapsto \transpose{[\delta, -\delta]}) \\
+    % &= \delta \mapsto \transpose{[\partial_1\sin(x)\delta, -1 \delta]} \\
     &= \delta \mapsto \transpose{[\cos(x)\delta, -\delta]}.
   \end{aligned}
 \end{equation}
 In this form, starting with an outpt perturbation \(\delta = 1\), we get back the gradient tuple
 through just one evaluation.  Incidentially, this is nothing else than the backpropagation
-\enquote{trick} \parencite{bishop2006pattern}!
+\enquote{trick} \parencite{bishop2006pattern}!  Furthermore, applying this result to
+\([\Delta_1, \Delta_2]\) gives back the linear combination of the forward mode result.
 
-Applying this to equation~\eqref{eq:ad-primal}, we get (to be read in reverse order):
+In programmatic terms, we can proceed similar to above, only this time introducing \emph{adjoint}
+intermediate values \(\bar{v}\).  For the values in equation~\eqref{eq:ad-primal}, we get
 \begin{equation}
   \label{eq:ad-backward}
   \begin{aligned}
@@ -1084,16 +1098,24 @@ Applying this to equation~\eqref{eq:ad-primal}, we get (to be read in reverse or
     \bar{\Omega} &= \delta,
   \end{aligned}
 \end{equation}
-which is displayed in the red graph in \ref{fig:comp-graph-bw}.
+which is displayed in the red graph in \ref{fig:comp-graph-bw}.  Note that now, the backpropagated
+values can not be computed in parallel with forward evaluation; hence the equations are stated in
+reverse order.  Instead, the intermediate primal values have to be remembered and reused in a
+second, backward pass.
 
 Finally, it has to be noted that the two described modes of automatic differentiation are only two
 extremes of a spectrum.  Forward and backward calculations can really be interleaved in arbitrary
 order, just as it is possible to multiply Jacobians and their transposes in different order.  One
 frequent use case of this \emph{mixed-mode AD} is when loss functions, differentiated using backward
 mode, contain broadcasting functions; for example, nonlinearities in neural network.  These have a
-shape of \(\RR^N \to \RR^N\), so forward mode is usually faster.  In general, unfortunately,
-determining the optimal order of derivative evaluation is hard~-- this so-called \emph{optimal
-  Jacobian accumulation} problem is known to be NP-complete \parencite{naumann2007optimal}.
+shape of \(\RR^N \to \RR^N\), but only involve a linear number of operations, so forward mode pays
+off\footnote{As a rule of thumb in Julia, for \(f: \RR^M \to \RR^N\), forward mode is usually faster
+  when \(M \ll N\) or as long as \(M \lessapprox 100\).  This folklore should always be confirmed by
+  benchmarking, though.  See
+  \url{https://github.com/JuliaDiff/ReverseDiff.jl\#should-i-use-reversediff-or-forwarddiff}.}.  In
+general, unfortunately, determining the optimal order of derivative evaluation is hard~-- this
+so-called \emph{optimal Jacobian accumulation} problem is known to be NP-complete
+\parencite{naumann2007optimal}.
 
 \newthought{The practical implementation} of automatic differentiation in programming languages
 opens up another set of possible choices.  One way is to use an external, compiler-based system that
@@ -1117,7 +1139,7 @@ numbers by nonstandard interpretation as truncated Taylor series:
 Since the higher order terms vanish, this is exactly the tuple of primal and tangent value that is
 calculated during the lockstep evaluation in forward mode:
 \begin{equation}
-  (z, \dot{z}) = (\phi(x), \Dif\phi(x)(\dot{x})) \Leftrightarrow z + \dot{z}\epsilon = \phi(x + \dot{x}\epsilon).
+  (z, \dot{z}) = (\phi(x), \Dif\phi(x)(\dot{x})) \quad\Leftrightarrow\quad z + \dot{z}\epsilon = \phi(x + \dot{x}\epsilon).
 \end{equation}
 (generalization to higher dimensions, as well as higher derivatives in form of hyper-dual numbers,
 follow equally natually.)
