--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -259,7 +259,7 @@
 % -------------------------------------------------------------------------------
 \title{\longtitle}
 
-% \includeonly{background,automatic_graph_tracking}
+% \includeonly{background}
 
 \begin{document}
 \chapterstyle{hangnum}
