Start OO/S2S discussion, wengert lists

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -271,6 +271,21 @@
 \setcounter{page}{3}
 
 \cleartorecto
+\epigraph{%
+  Es macht so glücklich, Computer zu sein:\\
+  alle Schererein\\
+  verwandeln sich in Rechnerei\\
+  und gehn in Millionstel Sekunden vorbei.\\
+  In wenigen \enquote{bit}\\
+  kriegst du die ganze Weltordnung mit\\
+  im Grund\\
+  heißt die Frage ja immer \enquote{Sein oder Nichtsein},\\
+  die erledigst du sogar ohne Und,\\
+  den ganzen Moder\\
+  mit einem einzigen Oder.
+}{\textit{Andreas Okopenko}}
+
+\cleartorecto
 \include{declaration}
 
 \cleartorecto
