--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -834,7 +834,8 @@ what the work of this thesis builds on.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Automatic Differentiation and \newline Computation Graphs}
+\section[Automatic Differentiation and Computation Graphs]{Automatic Differentiation and \newline
+  Computation Graphs}
 \label{sec:cg-ad}
 
 This section may appear as an outlier from the original topic; in fact, the mathematics developed
@@ -918,7 +919,7 @@ words:
 This fact allows one to propagate differential values through composed functions, by the chain rule,
 which we write in the following compositional form:
 \begin{equation}
-  \Dif(\phi \circ \psi)(x) = \Dif\phi(\psi(x)) \circ \Dif\psi(x)
+  \Dif(\phi \circ \psi)(x) = \Dif\phi(\psi(x)) \circ \Dif\psi(x).
 \end{equation}
 In the one-dimensional case, we simply have
 \begin{equation}
@@ -933,7 +934,7 @@ are exactly multiplications by a scalar.  Therefore, we can recover the chain ru
     % &= \Dif\phi(\psi(x))\left( \Dif\psi(x)(\Delta) \right) \\
     % &= \Dif\phi(\psi(x))\left( \partial_1 \psi(x) \, \Delta \right) \\
     % &= \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \, \Delta \\
-    &= \left( \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \right) \, \Delta
+    &= \left( \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \right) \, \Delta,
   \end{aligned}
 \end{equation}
 as we know it from calculus.  Here, the product in the resulting expression arises from the fact
@@ -1068,8 +1069,7 @@ composition in the chain rule:
   \end{aligned}
 \end{equation}
 For our example function \(f\), this gives the same structural form of the result as the forward
-mode~-- only that now, the value is a vector.  \(\mathfrak{d}\) can in this case be identified with
-a scalar \(\delta\), therefore:
+mode~-- only that now, the value is a vector:
 \begin{equation}
   \begin{aligned}
     \CoDif f(x, y) &= \CoDif (g \circ (\sin \otimes \ident))(x, y) \\
@@ -1109,9 +1109,9 @@ order, just as it is possible to multiply Jacobians and their transposes in diff
 frequent use case of this \emph{mixed-mode AD} is when loss functions, differentiated using backward
 mode, contain broadcasting functions; for example, nonlinearities in neural network.  These have a
 shape of \(\RR^N \to \RR^N\), but only involve a linear number of operations, so forward mode pays
-off\footnote{As a rule of thumb in Julia, for \(f: \RR^M \to \RR^N\), forward mode is usually faster
-  when \(M \ll N\) or as long as \(M \lessapprox 100\).  This folklore should always be confirmed by
-  benchmarking, though.  See
+off\footnote{As a rule of thumb in Julia, for \(f: \RR^M \to \RR^N\), forward mode typically
+  performs better when \(M \ll N\) or as long as \(M \lessapprox 100\).  This folklore should always
+  be confirmed by benchmarking, though.  See
   \url{https://github.com/JuliaDiff/ReverseDiff.jl\#should-i-use-reversediff-or-forwarddiff}.}.  In
 general, unfortunately, determining the optimal order of derivative evaluation is hard~-- this
 so-called \emph{optimal Jacobian accumulation} problem is known to be NP-complete
@@ -1124,10 +1124,14 @@ transpiles Fortran and C code \parencite{tapenadedevelopers2019tapenade}) or in 
 specification, as is done in Stan \parencite{carpenter2015stan}.  But as PPLs defined by external
 DSLs, these systems lack flexibility in programming, especially concerning abstractions and
 interaction with other libraries (both mentioned exampes are really applied in niche cases:
-log-densities in a probabilistic model, and large numeric simulations).
+log-densities in a probabilistic model, and large numeric simulations).  Recently, the Swift for
+TensorFlow project \parencite{tensorflowdevelopers2018swift,hong2018graph} introduced a modern
+variant of this by extending the compiler of the Swift programming language with facilities to
+perform automatic differentiation, as well as some features to simplify graph operations required by
+TensorFlow.
 
 The second possibility is \emph{operator overloading}.  Forward mode can be recast in mathematically
-equivalent form by using dual numbers \parencite[][section 3.1.1]{baydin2018automatic}.  These
+equivalent form by using dual numbers \parencite[see][section 3.1.1]{baydin2018automatic}.  These
 consist of two parts, similar to complex numbers: \(z = x + y\epsilon\).  However, contrary to the
 imaginary unit, the infinitesimal unit \(\epsilon\) vanishes under multiplication with itself:
 \(\epsilon^2 = 0\).  The consequence of this is that functions can naturally be extended to dual
@@ -1142,7 +1146,7 @@ calculated during the lockstep evaluation in forward mode:
   (z, \dot{z}) = (\phi(x), \Dif\phi(x)(\dot{x})) \quad\Leftrightarrow\quad z + \dot{z}\epsilon = \phi(x + \dot{x}\epsilon).
 \end{equation}
 (generalization to higher dimensions, as well as higher derivatives in form of hyper-dual numbers,
-follow equally natually.)
+follow equally naturally.)
 
 Dual numbers can rather easily be added to an existing programming language that has a sufficiently
 extensibly system for overloading mathematical operators.  This can be done using traits or type
@@ -1164,18 +1168,35 @@ to extension~-- a fundamental limitation of its single dispatch, object oriented
 Backward-mode AD can be implemented using operator overloading as well, but this requires more
 effort.  Since adoint values cannot be simply threaded through in parallel to forward evaluation,
 one needs to build up a data structure during the forward pass, which can at the end be traced back
-in reverse order.
+in reverse order.  One possibility of doing this is to use closures, but the usage of many higher
+order function might lead to unwanted heap allocation and makes understanding harder.
 
-This is exactly what graph-based machine learning frameworks do: PyTorch
-\parencite{paszke2017automatic}, TensorFlow \parencite{abadi2015tensorflow}\footnote{Strictly
-  speaking, TensorFlow (unless in eager mode) always builds up a complete expression graph, which is
-  differentiated symbolically, and is therefore somewhat in the middle between operator overloading
-  (since the graph is a runtime data structure) and source transformation (since the graph undergoes
-  various \enquote{static} transformations, and is then \enquote{lowered}).}, DyNet
-\parencite{neubig2017dynet}, and Chainer \parencite{tokui2015chainer}.
+The alternative is to use a tape structure, or \emph{Wengert list} \parencite[][section
+3]{baydin2018automatic}.  On such a list, the computation graph is stored as by pointers between
+elements, as shown in figure~\ref{fig:wengert-list}.  The Wengert list can also be constructed
+through an operator overloading approach, which is exactly what graph-based machine learning
+frameworks do: PyTorch \parencite{paszke2017automatic}, TensorFlow \parencite{abadi2015tensorflow}
+in eager mode, DyNet \parencite{neubig2017dynet}, and Chainer \parencite{tokui2015chainer}.  In
+these, the programmer interacts with a library mirroring the usual numerical functions, but
+operating on a special \enquote{variable} or \enquote{tensor} type.  These operations are overloaded
+so that function calls, in addition to performing the primal calculations, are stored either
+explicitely on a global Wengert list structure, or implicitly in the constructed expression objects.
+Then, one can start a backward pass from any leaf variable to propagate back derivatives to the
+roots of the computation graph.
 
+This style of implementation has limitations, though: it requires building up many runtime
+structures, and is completely oblivious of control structures.  Additionally, the code expressing
+differentiable functions has to be written in a library-aware fashion, preventing the usage of
+third-party functions and language features, and forcing the user to adhere to certain semantic
+constraints that cannot be verified statically by the host language.  TensorFlow in graph mode
+addresses some of these points.  It builds up a complete expression graph, which is differentiated
+symbolically, and is therefore somewhat in the middle between operator overloading (since the graph
+is still a runtime data structure) and a static transformation (the resulting graph is not
+interpreted in the host language, but converted to run on an \enquote{accelerator}, which can one of
+several kinds of processing unit~-- CPU, GPU, TPU,\ldots).  It still requires to stick to the
+provided expression types and library functions, though.
 
-Zygote, control flow;
+Zygote, control flow;\todo{todo}
 
 
 
